added applications routes/controllers/validation/tests/docs
